PMD7: use pattern matching variable